<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="10dp"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/view"
        android:layout_width="359dp"
        android:layout_height="531dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:background="#70FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="#FF9F8AA6"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Create an Account"
        android:textColor="#8C307C"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="#9F8AA6"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_Name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#FF9F8AA6"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/registerFisrtName"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_confirmPassword"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColorHint="#9F8AA6"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="Sign Up"
        app:backgroundTint="#8C699E"
        app:cornerRadius="15dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/registerFisrtName"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_FirstName"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#FF9F8AA6"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="322dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="By creating an account you agree to our Terms of Service and Privacy Policy."
        android:textColor="#8C307C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Full Name"
        android:textColor="#8C307C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Address"
        android:textColor="#8C307C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registerFisrtName" />

    <EditText
        android:id="@+id/registerAddress"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/register_address"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#FF9F8AA6"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Email "
        android:textColor="#8C307C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registerAddress" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Phone"
        android:textColor="#8C307C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:digits="10"
        android:ems="10"
        android:hint="@string/register_phone"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Password"
        android:textColor="#8C307C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/registerPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>